--- a/date/2025-03/page-3.htm
+++ b/date/2025-03/page-3.htm
@@ -273,16 +273,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-3-21-node-share-links.htm" title="VPN设备 | 3月21日18.9M/S|免费VPN/V2ray/Clash/Shadowrocket/SSR免费节点订阅分享">VPN设备 | 3月21日18.9M/S|免费VPN/V2ray/Clash/Shadowrocket/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-22-free-v2ray.htm" title="VPN设备 | 3月22日21.7M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享">VPN设备 | 3月22日21.7M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-14-node-share.htm" title="VPN设备 | 3月14日21M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享">VPN设备 | 3月14日21M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-69207.htm" title="华畜兽药是哪个公司的（华畜兽药可排第几名）">华畜兽药是哪个公司的（华畜兽药可排第几名）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-31-free-node-subscribe-links.htm" title="VPN设备 | 3月31日21.8M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享">VPN设备 | 3月31日21.8M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-86327.htm" title="关于vue中api统一管理的那些事_vue.js_">关于vue中api统一管理的那些事_vue.js_</a></li>
-                        <li class="py-2"><a href="/news/article-75175.htm" title="读取spring的配置来定义常量">读取spring的配置来定义常量</a></li>
-                        <li class="py-2"><a href="/news/article-80628.htm" title="动物疫苗的使用方法有哪些图片及价格视频（动物疫苗的使用方法有哪些图片及价格视频教学）">动物疫苗的使用方法有哪些图片及价格视频（动物疫苗的使用方法有哪些图片及价格视频教学）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-18-free-node-subscribe.htm" title="VPN设备 | 3月18日22.8M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享">VPN设备 | 3月18日22.8M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-87754.htm" title="宠物店亏本了怎么办（现在宠物店生意亏死）">宠物店亏本了怎么办（现在宠物店生意亏死）</a></li>
+                        <li class="py-2"><a href="/news/article-91376.htm" title="一、重写了equals为什么还要重写hashcode">一、重写了equals为什么还要重写hashcode</a></li>
+                        <li class="py-2"><a href="/news/article-87041.htm" title="兽药安泰又叫什么（兽药安泰又叫什么名字）">兽药安泰又叫什么（兽药安泰又叫什么名字）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-26-clash-v2ray-ss-ssr.htm" title="VPN设备 | 3月26日19.7M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享">VPN设备 | 3月26日19.7M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-81350.htm" title="动物疫苗可以带上高铁吗北京疫情防控（动物疫苗可以带上高铁吗北京疫情防控）">动物疫苗可以带上高铁吗北京疫情防控（动物疫苗可以带上高铁吗北京疫情防控）</a></li>
+                        <li class="py-2"><a href="/news/article-89235.htm" title="常见 几种 git操作代码回退的方法">常见 几种 git操作代码回退的方法</a></li>
+                        <li class="py-2"><a href="/news/article-86326.htm" title="vue实现列表垂直无缝滚动_vue.js">vue实现列表垂直无缝滚动_vue.js</a></li>
+                        <li class="py-2"><a href="/news/article-76527.htm" title="如何使用线程池执行定时任务？">如何使用线程池执行定时任务？</a></li>
+                        <li class="py-2"><a href="/news/article-73153.htm" title="宠物粮食专卖店电话多少啊（宠物粮基地）">宠物粮食专卖店电话多少啊（宠物粮基地）</a></li>
+                        <li class="py-2"><a href="/news/article-91378.htm" title="动物疫苗管理法律法规最新文件 动物疫苗管理法律法规最新文件是什么">动物疫苗管理法律法规最新文件 动物疫苗管理法律法规最新文件是什么</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-5-free-v2ray-subscribe.htm" title="VPN设备 | 4月5日18.1M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享">VPN设备 | 4月5日18.1M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -294,7 +294,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
