--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -313,7 +313,61 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://ccc.ssy614.com/#/register?code=" data-type="Shanshui" data-code="FDn6IwOG" target="_blank"><b>山水云</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://www.dginv.click/#/register?code=" data-type="Gougou" data-code="G6yPcu5e" target="_blank"><b>狗狗加速</b></a>
+                                </div>
+                                <div class="panel-body">
+                                    <p>?狗狗加速双11双12黑五优惠 ?</p><p>? 套餐优惠码（下单时输入）</p><p>月付/季付套餐 85折 ➡️ 优惠码 “2411”</p><p>半年付立减 20元 ➡️ 优惠码 “20”</p><p>年付立减 30元 ➡️ 优惠码 “30”</p><p>2年付立减 40元 ➡️ 优惠码 “40”</p><p><br></p><p>? 充值返现</p><p>充值超过100元，自动赠送10元：</p><p>充100得110，充200得220，以此类推（? 充值路径：左侧菜单-&gt;个人中心-&gt;充值 ，打开余额自动续费，支付无手续费）</p><p><br></p><p>⏰ 截止至 12月12日 24时 立即下单，锁定年度最低价！</p>
+                                    <dl>
+                                        <dt>资费</dt>
+                                                                                <dd>
+                                            <p>
+                                                <label>标准套餐(160G)：</label> ¥15.80/月付。 
+                                                                                                流量160G/月; 
+                                                                                                半年付9.5折，年付9折; 
+                                                                                                集群负载均衡; 
+                                                                                                限速150M，无审计; 
+                                                                                                解锁流媒体及ChatGPT; 
+                                                                                                不限设备数，全平台通用; 
+                                                                                                当月流量用完请买流量重制套餐重制使用流量; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>高级套餐(200G)：</label> ¥20.80/月付。 
+                                                                                                流量200G/月; 
+                                                                                                半年付9折，年付8折; 
+                                                                                                集群负载均衡; 
+                                                                                                不限速，无审计; 
+                                                                                                高速专线，极低延迟; 
+                                                                                                全球独家Hysteria协议; 
+                                                                                                解锁流媒体及ChatGPT; 
+                                                                                                不限设备数，全平台通用; 
+                                                                                                在线客服，远程技术支持; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>豪华套餐(500G)：</label> ¥39.80/月付。 
+                                                                                                流量500G/月; 
+                                                                                                年付75折，2年付6折; 
+                                                                                                集群负载均衡; 
+                                                                                                不限速，无审计; 
+                                                                                                不限速，无审计; 
+                                                                                                全球独家Hysteria2协议; 
+                                                                                                解锁流媒体及ChatGPT; 
+                                                                                                不限设备数，全平台通用; 
+                                                                                            </p>
+                                        </dd>
+                                                                            </dl>
+                                </div>
+                                <div class="panel-footer">
+                                    <a href="javascript:;" class="js_to" data-url="https://www.dginv.click/#/register?code=" data-type="Gougou" data-code="G6yPcu5e" target="_blank">点击查看</a>
+                                </div>
+                            </div>
+                            <hr />
+                                                        <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <a href="javascript:;" class="js_to" data-url="https://sy.wgkzg.com/#/register?code=" data-type="Shanshui" data-code="FDn6IwOG" target="_blank"><b>山水云</b></a>
                                 </div>
                                 <div class="panel-body">
                                     
@@ -382,7 +436,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://ccc.ssy614.com/#/register?code=" data-type="Shanshui" data-code="FDn6IwOG" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://sy.wgkzg.com/#/register?code=" data-type="Shanshui" data-code="FDn6IwOG" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -572,16 +626,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-3-8-node-share-links.htm" title="VPN设备 | 3月8日22.9M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN设备 | 3月8日22.9M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-13-node-share.htm" title="VPN设备 | 3月13日19.3M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 3月13日19.3M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-80628.htm" title="动物疫苗的使用方法有哪些图片及价格视频（动物疫苗的使用方法有哪些图片及价格视频教学）">动物疫苗的使用方法有哪些图片及价格视频（动物疫苗的使用方法有哪些图片及价格视频教学）</a></li>
-                        <li class="py-2"><a href="/news/article-79255.htm" title="覆流年小说陆安然在线观看（干货分享）覆流年小说陆安然重生几次，青春正点，邱非，">覆流年小说陆安然在线观看（干货分享）覆流年小说陆安然重生几次，青春正点，邱非，</a></li>
-                        <li class="py-2"><a href="/news/article-81351.htm" title="领养协议书范本宠物狗怎么写（领养协议书范本 宠物）">领养协议书范本宠物狗怎么写（领养协议书范本 宠物）</a></li>
-                        <li class="py-2"><a href="/news/article-89236.htm" title="Apache Hudi 如何加速传统的批处理模式">Apache Hudi 如何加速传统的批处理模式</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-26-clash-v2ray-ss-ssr.htm" title="VPN设备 | 3月26日19.7M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享">VPN设备 | 3月26日19.7M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-73821.htm" title="长春宠物医院排名（长春良心的宠物医院）">长春宠物医院排名（长春良心的宠物医院）</a></li>
-                        <li class="py-2"><a href="/news/article-66026.htm" title="宠物店一般卖几个月的猫 宠物店一般卖几个月的猫咪">宠物店一般卖几个月的猫 宠物店一般卖几个月的猫咪</a></li>
-                        <li class="py-2"><a href="/news/article-85614.htm" title="北京领养狗的有哪些地方啊（北京领养狗狗的地方在哪里）">北京领养狗的有哪些地方啊（北京领养狗狗的地方在哪里）</a></li>
+                        <li class="py-2"><a href="/news/article-78570.htm" title="将文件转成base64 字符串">将文件转成base64 字符串</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-17-free-high-speed-nodes.htm" title="VPN设备 | 3月17日22M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 3月17日22M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-87041.htm" title="兽药安泰又叫什么（兽药安泰又叫什么名字）">兽药安泰又叫什么（兽药安泰又叫什么名字）</a></li>
+                        <li class="py-2"><a href="/news/article-82031.htm" title="成都市免费领养狗狗地址查询（成都市免费领养狗狗地址查询电话）">成都市免费领养狗狗地址查询（成都市免费领养狗狗地址查询电话）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-6-free-v2ray-subscribe.htm" title="VPN设备 | 3月6日21M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享">VPN设备 | 3月6日21M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-90692.htm" title="动物疫苗要打几针才有效呢 动物疫苗要打几针才有效呢视频">动物疫苗要打几针才有效呢 动物疫苗要打几针才有效呢视频</a></li>
+                        <li class="py-2"><a href="/news/article-83459.htm" title="mysql中时间的储存方式_如何在MySQL 中存储日期？">mysql中时间的储存方式_如何在MySQL 中存储日期？</a></li>
+                        <li class="py-2"><a href="/news/article-84166.htm" title="1970年农历四月二十是什么星座（1970年阴历四月二十是什么星座）">1970年农历四月二十是什么星座（1970年阴历四月二十是什么星座）</a></li>
+                        <li class="py-2"><a href="/news/article-91376.htm" title="一、重写了equals为什么还要重写hashcode">一、重写了equals为什么还要重写hashcode</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-9-free-v2ray.htm" title="VPN设备 | 3月9日18.4M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享">VPN设备 | 3月9日18.4M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -593,7 +647,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
